--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 
-@import "sass/abstracts/variables";
+@import "helpers/variables";
 
 //font-family: 'Lato', sans-serif;
