--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,11 @@
 
 @import "helpers/variables";
 
-//font-family: 'Lato', sans-serif;
+html {
+  font-family: "Lato", sans-serif;
+  font-size: 62.5%; // 1rem = 10px;
+}
+
+body {
+  box-sizing: border-box;
+}
