--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,9 +6,12 @@
 
 html {
   font-family: "Lato", sans-serif;
-  font-size: 62.5%; // 1rem = 10px;
 }
 
 body {
   box-sizing: border-box;
+  //padding: 0;
 }
+// .container-fluid {
+//   padding: 0;
+// }
