--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,8 +10,8 @@ html {
 
 body {
   box-sizing: border-box;
-  //padding: 0;
 }
-// .container-fluid {
-//   padding: 0;
-// }
+
+p {
+  font-weight: 200;
+}
