moved nav links to right, added copyright row

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -22,12 +22,10 @@
   &:hover {
     text-decoration: underline;
   }
+}
 
-  //   &.active {
-  //     //color: $color-active;
-  //     //font-weight: 700;
-  //     //text-decoration: underline;
-  //   }
+.copyright {
+  border-top: 1px solid $color-white;
 }
 
 @media only screen and (max-width: 600px) {
