--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container-fluid">
-    <div class="row py-4">
+    <div class="row pt-4">
       <div class="col-md-4 px-4">
         <!-- <h5 class="my-2">Find Us</h5> -->
         <p>
@@ -15,7 +15,6 @@
       <div class="col-md-4 text-center">
         <!-- <h5 class="my-2">Pages</h5> -->
         <img src="../../../assets/images/logo-white.png" alt="" class="py-4" />
-        <p>Copyright &#169; 2021</p>
       </div>
       <div class="col-md-4">
         <!-- <h5 class="my-2">Find Us</h5> -->
@@ -50,6 +49,11 @@
             >
           </li>
         </ul>
+      </div>
+    </div>
+    <div class="row copyright">
+      <div class="col-md-12 text-center pt-2">
+        <p>Copyright &#169; 2021</p>
       </div>
     </div>
   </div>
