--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -16,7 +16,10 @@
     >
       <span><i class="fa fa-2x fa-plus-square"></i> </span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div
+      class="collapse navbar-collapse justify-content-end"
+      id="navbarTogglerDemo02"
+    >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a
