--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/helpers/variables";
 
 .footer {
-  position: fixed;
+  //position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
