restyled navbar+footer with gradient color

--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -65,6 +65,7 @@
             cols="30"
             rows="10"
             class="form-control"
+            placeholder="Message"
             required
             ngModel
           ></textarea>
