added contact section to contact page+style

--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -70,9 +70,20 @@
             ngModel
           ></textarea>
         </div>
-        <button class="btn btn-primary">Primary</button>
+        <button class="btn">Send Message</button>
       </form>
     </div>
-    <div class="col-md-6 contact-box">Additional info here</div>
+    <div class="col-md-6 contact-box">
+      <div class="info-box py-5 px-3">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          mollitia sunt esse. Possimus, vero perferendis minus blanditiis
+          delectus quo ab?
+        </p>
+        <p><i class="fa fa-location-arrow"></i> 123 Fake St. Dublin</p>
+        <p><i class="fa fa-phone"></i> +353 01-15412</p>
+        <p><i class="fa fa fa-envelope"></i> info@moreInfo.com</p>
+      </div>
+    </div>
   </div>
 </div>
