--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,3 +1,4 @@
 $color-blue: rgb(0, 174, 255);
 $color-white: rgb(255, 255, 255);
 $color-active: rgb(5, 49, 93);
+$color-crimson: rgb(220, 20, 60);
