--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -2,3 +2,11 @@ $color-blue: rgb(0, 174, 255);
 $color-white: rgb(255, 255, 255);
 $color-active: rgb(5, 49, 93);
 $color-crimson: rgb(220, 20, 60);
+$color-paleBlue: rgb(240, 248, 255);
+
+//-----ALTERNATE COLOURS
+$color-altBlue: rgb(142, 202, 230);
+$color-altGreen: rgb(33, 158, 188);
+$color-altNavy: rgb(2, 48, 71);
+$color-altYellow: rgb(255, 183, 3);
+$color-altOrange: rgb(251, 133, 0);
