--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -5,7 +5,11 @@ form {
   padding: 20px 20px;
   border-radius: 5px;
   margin: 40px 20px;
-  box-shadow: 10px 10px 20px $color-blue;
+  box-shadow: 5px 10px 20px $color-blue;
+
+  @media only screen and (max-width: 600px) {
+    box-shadow: 0px 10px 20px $color-blue;
+  }
 
   & label {
     color: $color-blue;
@@ -24,6 +28,11 @@ form {
   background-color: $color-blue;
   color: $color-white;
   border-radius: 20px;
+
+  &:hover {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+      0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  }
 }
 
 .contact-box {
@@ -35,7 +44,15 @@ form {
     margin: 0 auto;
     width: 80%;
     border-radius: 5px;
-    box-shadow: 10px 10px 20px $color-blue;
+    box-shadow: 5px 10px 20px $color-blue;
+
+    @media only screen and (max-width: 600px) {
+      box-shadow: 0px 10px 20px $color-blue;
+    }
+
+    & p {
+      color: $color-active;
+    }
 
     & p .fa {
       color: $color-crimson;
