course component added to home+base style

--- a/src/app/contact/contact-form/contact-form.component.scss
+++ b/src/app/contact/contact-form/contact-form.component.scss
@@ -21,6 +21,7 @@ form {
     border: transparent;
     border-left: 1px solid $color-blue;
     border-bottom: 1px solid $color-blue;
+    background-color: $color-paleBlue;
   }
 }
 
