--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,13 +4,15 @@
 
 @import "helpers/variables";
 
-html {
-  font-family: "Lato", sans-serif;
-}
-
 body {
   box-sizing: border-box;
   background-color: $color-paleBlue;
+}
+
+html {
+  font-family: "Lato", sans-serif;
+
+  // font-size: 62.5%;
 }
 
 p {
