add about component to home module+ styling

--- a/src/app/home/courses/courses.component.scss
+++ b/src/app/home/courses/courses.component.scss
@@ -17,6 +17,8 @@
 .card {
   width: 75%;
   margin: 0 auto;
+  border-radius: 10px;
+  border: none;
 }
 
 @media only screen and (max-width: 1200px) {
