--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -46,5 +46,10 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col text-center">
+        <button class="btn btn-primary my-5">More First Aid Cousrses</button>
+      </div>
+    </div>
   </div>
 </section>
