addition+styling of components for home template

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,21 +1,25 @@
 <section>
-  <div class="container-fluid about">
+  <div class="container about">
     <div class="row">
-      <div class="col-md-6 about_text">
-        <h2>A Leader in First Aid Courses across Ireland</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus nam
-          minima voluptatum enim vero veritatis quo debitis facilis. Culpa nobis
-          cumque adipisci quod corrupti aperiam vitae, odit numquam commodi.
-          Natus in, a perspiciatis quidem ut sequi recusandae culpa consequuntur
-          numquam quae iusto aut ad at expedita, tempora est. Numquam, libero?
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo dolorem
-          sapiente eveniet temporibus veniam neque perspiciatis officiis. Esse
-          ullam nostrum reiciendis, quasi omnis corporis nesciunt quisquam harum
-          necessitatibus. Fugiat, quidem!
-        </p>
+      <div class="col-md-6">
+        <div class="about_text-box py-5">
+          <h2 class="pb-4">A Leader in First Aid Courses across Ireland</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus
+            nam minima voluptatum enim vero veritatis quo debitis facilis. Culpa
+            nobis cumque adipisci quod corrupti aperiam vitae, odit numquam
+            commodi. Natus in, a perspiciatis quidem ut sequi recusandae culpa
+            consequuntur numquam quae iusto aut ad at expedita, tempora est.
+            Numquam, libero?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
+            dolorem sapiente eveniet temporibus veniam neque perspiciatis
+            officiis. Esse ullam nostrum reiciendis, quasi omnis corporis
+            nesciunt quisquam harum necessitatibus. Fugiat, quidem!
+          </p>
+          <button class="btn btn-primary">Find Out More</button>
+        </div>
       </div>
       <div class="col-md-6 about_image">Image this side</div>
     </div>
