--- a/src/app/home/main-home/main-home.component.html
+++ b/src/app/home/main-home/main-home.component.html
@@ -1,2 +1,5 @@
 <app-courses></app-courses>
 <app-about></app-about>
+<app-contact></app-contact>
+<app-shop></app-shop>
+<app-testimonial></app-testimonial>
