--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -31,6 +31,11 @@
           >
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/about" routerLinkActive="active"
+            >About Us</a
+          >
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/courses" routerLinkActive="active"
             >Courses</a
           >
