connected navigation links + space around buttons

--- a/src/app/about-us/what-we-do/what-we-do.component.html
+++ b/src/app/about-us/what-we-do/what-we-do.component.html
@@ -1,7 +1,25 @@
 <section>
   <div class="container what-we-do">
     <div class="row">
-      <div class="col-md-6">text here</div>
+      <div class="col-md-6">
+        <div class="what-we-do_text">
+          <h3 class="pb-3">What We Do</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sit
+            libero doloremque nesciunt, sunt atque.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro cum,
+            inventore temporibus voluptates itaque commodi cumque quidem
+            corrupti atque possimus, consequatur soluta. Quia, facere ea!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+            voluptate natus earum amet ex et eum necessitatibus sint saepe
+            ipsum.
+          </p>
+        </div>
+      </div>
       <div class="col-md-6">image here</div>
     </div>
   </div>
