--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -15,7 +15,9 @@
             vitae officiis corporis eveniet ratione doloribus eum quae voluptas,
             hic odio veritatis ullam. Non, a dolor!
           </p>
-          <button class="btn btn-primary">Contact Us</button>
+          <button class="btn btn-primary my-3" (click)="onToContact()">
+            Contact Us
+          </button>
         </div>
       </div>
     </div>
