--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -48,7 +48,9 @@
     </div>
     <div class="row">
       <div class="col text-center">
-        <button class="btn btn-primary my-5">More First Aid Cousrses</button>
+        <button class="btn btn-primary my-5" (click)="onToCourses()">
+          More First Aid Cousrses
+        </button>
       </div>
     </div>
   </div>
