--- a/src/app/about-us/what-we-do/what-we-do.component.scss
+++ b/src/app/about-us/what-we-do/what-we-do.component.scss
@@ -1,13 +1,16 @@
 @import "../../../styles/styles.scss";
 
 section {
-  background-image: linear-gradient(
-    to bottom right,
-    $color-blue,
-    $color-active
-  );
+  background-image: linear-gradient(to top left, $color-blue, $color-active);
 }
 
 .what-we-do {
-  height: 500px;
+  &_text {
+    padding: 100px 10px;
+  }
+
+  h3,
+  p {
+    color: $color-white;
+  }
 }
