--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -18,7 +18,9 @@
             officiis. Esse ullam nostrum reiciendis, quasi omnis corporis
             nesciunt quisquam harum necessitatibus. Fugiat, quidem!
           </p>
-          <button class="btn btn-primary">Find Out More</button>
+          <button class="btn btn-primary mt-3" (click)="onToAbout()">
+            Find Out More
+          </button>
         </div>
       </div>
       <div class="col-md-6 about_image">Image this side</div>
