--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -40,7 +40,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/contact" routerLinkActive="active"
-              >Contact</a
+              >Contact Us</a
             >
           </li>
           <li class="nav-item">
