--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -42,7 +42,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/contact" routerLinkActive="active"
-            >Contact</a
+            >Contact Us</a
           >
         </li>
         <li class="nav-item">
