--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid">
+<div class="container">
   <div class="row">
-    <div class="col-md-6 form-box">
+    <div class="col-lg-6 form-box">
       <form
         class="py-5"
         (ngSubmit)="onCaptureForm(formData)"
@@ -73,7 +73,7 @@
         <button class="btn">Send Message</button>
       </form>
     </div>
-    <div class="col-md-6 contact-box">
+    <div class="col-lg-6 contact-box">
       <div class="info-box py-5 px-3">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
