--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -29,7 +29,7 @@
             name="email"
             ngModel
           />
-          <div class="form-text">
+          <div class="form-text text-muted small">
             We'll never share your email with anyone else.
           </div>
         </div>
