restyle buttons on pages

--- a/src/app/about-us/advice/advice.component.html
+++ b/src/app/about-us/advice/advice.component.html
@@ -11,7 +11,7 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             Accusantium quis doloribus sapiente?
           </p>
-          <button class="btn btn-primary mt-5" (click)="onToCourses()">
+          <button class="btn btn-blue mt-5" (click)="onToCourses()">
             View Courses
           </button>
         </div>
