--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -70,7 +70,7 @@
             ngModel
           ></textarea>
         </div>
-        <button class="btn">Send Message</button>
+        <button class="btn btn-blue">Send Message</button>
       </form>
     </div>
     <div class="col-lg-6 contact-box">
