--- a/src/app/home/contact/contact.component.html
+++ b/src/app/home/contact/contact.component.html
@@ -15,7 +15,7 @@
             vitae officiis corporis eveniet ratione doloribus eum quae voluptas,
             hic odio veritatis ullam. Non, a dolor!
           </p>
-          <button class="btn btn-primary my-3" (click)="onToContact()">
+          <button class="btn btn-blue my-3" (click)="onToContact()">
             Contact Us
           </button>
         </div>
