--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -15,7 +15,7 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-blue">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-blue">Go somewhere</a>
           </div>
         </div>
       </div>
@@ -41,15 +41,15 @@
               Some quick example text to build on the card title and make up the
               bulk of the card's content.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a href="#" class="btn btn-blue">Go somewhere</a>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col text-center">
-        <button class="btn btn-primary my-5" (click)="onToCourses()">
-          More First Aid Cousrses
+        <button class="btn btn-blue my-5" (click)="onToCourses()">
+          More First Aid Courses
         </button>
       </div>
     </div>
