--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
 
 @import "helpers/variables";
+@import "components/_buttons";
 
 body {
   box-sizing: border-box;
