testimonial rough layout began

--- a/src/app/home/testimonial/testimonial.component.html
+++ b/src/app/home/testimonial/testimonial.component.html
@@ -1,8 +1,55 @@
 <section>
   <div class="container testimonial">
     <div class="row">
-      <div class="col-md-3">text here</div>
-      <div class="col-md-9">testimonial here</div>
+      <div class="col-md-3">
+        <h3>First Aider Customer Testimonials</h3>
+      </div>
+      <div class="col-md-9">
+        <div
+          id="carouselExampleSlidesOnly"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active testimonial-box">
+              <div class="testimonial-text">
+                <h3>Lorem, ipsum.</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolores consectetur quod optio exercitationem, nostrum quas
+                  adipisci esse, quia deleniti atque necessitatibus mollitia
+                  delectus? Nihil, iste.
+                </p>
+                <p class="mb-0">Lorem, ipsum.</p>
+                <footer class="blockquote-footer">
+                  Someone famous in
+                  <cite title="Source Title">Source Title</cite>
+                </footer>
+              </div>
+            </div>
+            <div class="carousel-item testimonial-box">
+              <h3>Lorem, ipsum.</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                consectetur quod optio exercitationem, nostrum quas adipisci
+                esse, quia deleniti atque necessitatibus mollitia delectus?
+                Nihil, iste.
+              </p>
+              <p>Lorem, ipsum.</p>
+            </div>
+            <div class="carousel-item testimonial-box">
+              <h3>Lorem, ipsum.</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+                consectetur quod optio exercitationem, nostrum quas adipisci
+                esse, quia deleniti atque necessitatibus mollitia delectus?
+                Nihil, iste.
+              </p>
+              <p>Lorem, ipsum.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
