--- a/src/app/home/testimonial/testimonial.component.html
+++ b/src/app/home/testimonial/testimonial.component.html
@@ -1,10 +1,38 @@
 <section>
-  <div class="container testimonial">
+  <div class="container testimonial py-5">
     <div class="row">
-      <div class="col-md-3">
-        <h3>First Aider Customer Testimonials</h3>
+      <div class="col-md-6">
+        <h3 class="mb-4">First Aider Customer Testimonials</h3>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <footer class="blockquote-footer mb-4">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <footer class="blockquote-footer mb-4">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <footer class="blockquote-footer mb-4">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
+        <p class="mb-0">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </p>
+        <footer class="blockquote-footer mb-4">
+          Someone famous in
+          <cite title="Source Title">Source Title</cite>
+        </footer>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-6 d-none d-md-block">
         <div
           id="carouselExampleSlidesOnly"
           class="carousel slide"
@@ -13,7 +41,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active testimonial-box">
               <div class="testimonial-text">
-                <h3>Lorem, ipsum.</h3>
+                <h3>Lorem, ipsum. active</h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Dolores consectetur quod optio exercitationem, nostrum quas
@@ -28,7 +56,7 @@
               </div>
             </div>
             <div class="carousel-item testimonial-box">
-              <h3>Lorem, ipsum.</h3>
+              <h3>Lorem, ipsum.1</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
                 consectetur quod optio exercitationem, nostrum quas adipisci
@@ -38,7 +66,7 @@
               <p>Lorem, ipsum.</p>
             </div>
             <div class="carousel-item testimonial-box">
-              <h3>Lorem, ipsum.</h3>
+              <h3>Lorem, ipsum.2</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
                 consectetur quod optio exercitationem, nostrum quas adipisci
@@ -47,6 +75,9 @@
               </p>
               <p>Lorem, ipsum.</p>
             </div>
+            <!---TEMPORARY FIX FOR CAROUSEL JUMPING-->
+            <div class="carousel-item"></div>
+            <!---TEMPORARY FIX FOR CAROUSEL JUMPING-->
           </div>
         </div>
       </div>
