method to retrieve contact info/reset form+message

--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -109,6 +109,9 @@
         <button class="btn btn-blue" type="submit" [disabled]="!formData.valid">
           Send Message
         </button>
+        <div class="form-text text-muted small" *ngIf="thankYou">
+          Thank You for your interest.
+        </div>
       </form>
     </div>
     <div class="col-lg-6 contact-box">
