card added to courses/moved contact model

--- a/src/app/home/courses/courses.component.scss
+++ b/src/app/home/courses/courses.component.scss
@@ -13,6 +13,8 @@
 .card {
   width: 100%;
   margin: 0 auto;
-  border-radius: 10px;
-  border: none;
+  border-radius: none;
+  //border: none;
+  border: 2px solid $color-blue;
+  background-color: $color-paleBlue;
 }
