--- a/src/app/courses/course-card/course-card.component.html
+++ b/src/app/courses/course-card/course-card.component.html
@@ -1,11 +1,29 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 mt-3">
+      <div class="col-md-6 mt-3" *ngFor="let course of coursesArray">
+        <div class="card">
+          <img src="{{ course.image }}" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">{{ course.title }}</a>
+            </h4>
+            <div class="card-info">
+              <p><i class="fa fa-calendar"></i>{{ course.date }}</p>
+              <p><i class="fa fa-user"></i>{{ course.people }}</p>
+              <p><i class="fa fa-map-marker"></i>{{ course.location }}</p>
+            </div>
+            <p class="card-text">
+              {{ course.information }}
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col-md-6 mt-3">
         <div class="card">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
-            <h4 class="card-title">Card title</h4>
+            <h4 class="card-title"><a href="#">Card title</a></h4>
             <div class="card-info">
               <p><i class="fa fa-calendar"></i>date</p>
               <p><i class="fa fa-user"></i>people</p>
@@ -19,32 +37,9 @@
               obcaecati aperiam fugiat placeat, commodi ut facere tenetur
               doloremque officia!
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-      </div>
-      <div class="col-md-6 mt-3">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h4 class="card-title">Card title</h4>
-            <div class="card-info">
-              <p><i class="fa fa-calendar"></i>date</p>
-              <p><i class="fa fa-user"></i>people</p>
-              <p><i class="fa fa-map-marker"></i>location</p>
-            </div>
-            <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reprehenderit assumenda iusto illo earum eos aut voluptatem
-              temporibus atque voluptatum impedit, ipsum mollitia facilis
-              aspernatur amet perspiciatis? Neque dolore quidem similique
-              obcaecati aperiam fugiat placeat, commodi ut facere tenetur
-              doloremque officia!
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
