--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -1,4 +1,5 @@
 $color-blue: rgb(0, 174, 255);
+$color-darkBlue: rgb(15, 15, 214);
 $color-white: rgb(255, 255, 255);
 $color-active: rgb(5, 49, 93);
 $color-crimson: rgb(220, 20, 60);
