courseService to handle course data, layout change

--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -6,7 +6,24 @@
       </div>
     </div>
     <div class="row courses">
-      <div class="col-md-4">
+      <div class="col-md-4" *ngFor="let course of courseList">
+        <div class="card">
+          <img src="{{ course.image }}" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">{{ course.title }}</h5>
+            <p class="card-text">
+              {{ course.information }}
+            </p>
+            <p class="card-text">
+              {{ course.date }}
+            </p>
+            <p class="card-text">
+              {{ course.location }}
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- <div class="col-md-4">
         <div class="card">
           <img src="..." class="card-img-top" alt="..." />
           <div class="card-body">
@@ -31,20 +48,7 @@
             <a href="#" class="btn btn-blue">Go somewhere</a>
           </div>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-blue">Go somewhere</a>
-          </div>
-        </div>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col text-center">
