--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -6,16 +6,20 @@
       </div>
     </div>
     <div class="row courses">
-      <div class="col-md-4" *ngFor="let course of courseList">
-        <div class="card">
-          <img src="{{ course.image }}" class="card-img-top" alt="..." />
+      <div class="col-md-4" *ngFor="let course of courseList; let i = index">
+        <div class="card" *ngIf="i < 3">
+          <img
+            src="{{ course.image }}"
+            class="card-img-top"
+            alt="{{ course.title }}"
+          />
           <div class="card-body">
             <h5 class="card-title">{{ course.title }}</h5>
             <p class="card-text">
               {{ course.information }}
             </p>
             <p class="card-text">
-              {{ course.date }}
+              {{ course.date | date: "dd/MM/yyyy" }}
             </p>
             <p class="card-text">
               {{ course.location }}
