individual course selection connected to info

--- a/src/app/courses/course-info/course-info.component.html
+++ b/src/app/courses/course-info/course-info.component.html
@@ -1,5 +1,5 @@
 <h3>this is course info page</h3>
-
+<h3>{{ displayCourse.location }}</h3>
 <section>
   <div class="container">
     <div class="row">
