--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -19,7 +19,7 @@
           <div class="card-body">
             <h5 class="card-title">{{ course.title }}</h5>
             <p class="card-text">
-              {{ course.information }}
+              {{ course.information | wordCut }}
             </p>
             <p class="card-text">
               {{ course.date | date: "dd/MM/yyyy" }}
