--- a/src/app/home/courses/courses.component.html
+++ b/src/app/home/courses/courses.component.html
@@ -22,10 +22,15 @@
               {{ course.information | wordCut }}
             </p>
             <p class="card-text">
-              {{ course.date | date: "dd/MM/yyyy" }}
+              <i class="fa fa-calendar"></i> Date:
+              {{ course.date | date: "fullDate" }}
             </p>
             <p class="card-text">
-              {{ course.location }}
+              <i class="fa fa-clock-o"></i> Time:
+              {{ course.time }}
+            </p>
+            <p class="card-text">
+              <i class="fa fa-map-marker"></i> Location: {{ course.location }}
             </p>
           </div>
         </div>
